--- a/fw/pocket_radio_v3/pocket_radio_v3.ioc
+++ b/fw/pocket_radio_v3/pocket_radio_v3.ioc
@@ -46,6 +46,8 @@ Mcu.UserConstants=
 Mcu.UserName=STM32G030C8Tx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
+NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -67,16 +69,18 @@ PA2.Signal=USART2_TX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB0.GPIO_Label=VOL_P
+PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB0.GPIO_PuPd=GPIO_PULLUP
 PB0.Locked=true
-PB0.Signal=GPIO_Input
-PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.Signal=GPXTI0
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB1.GPIO_Label=CHAN_M
+PB1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.Locked=true
-PB1.Signal=GPIO_Input
+PB1.Signal=GPXTI1
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=DIG1
 PB11.Locked=true
@@ -97,16 +101,18 @@ PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=IND
 PB15.Locked=true
 PB15.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB2.GPIO_Label=CHAN_P
+PB2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB2.GPIO_PuPd=GPIO_PULLUP
 PB2.Locked=true
-PB2.Signal=GPIO_Input
-PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB2.Signal=GPXTI2
+PB3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB3.GPIO_Label=VOL_M
+PB3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB3.GPIO_PuPd=GPIO_PULLUP
 PB3.Locked=true
-PB3.Signal=GPIO_Input
+PB3.Signal=GPXTI3
 PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=ADDR_SEL
 PB5.GPIO_PuPd=GPIO_PULLDOWN
@@ -192,6 +198,14 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.USART1Freq_Value=48000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=96000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
